--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 </head>
 
 <body>
-  <p>Welcome to the chat app</p>
+    <p>Welcome to the chat app</p>
 
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="js/index.js"></script>
+    <ol id="message"></ol>
+
+	<form id="message-form">
+		<input type="text" name="message" placeholder="Message">
+
+		<button>Send</button>
+		
+	</form>    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
