--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 		<button>Send</button>
 		
 	</form>    
+	<button id="send-locattion">Send-locattion</button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/index.js"></script>
