--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,67 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
-<body>
-    <p>Welcome to the chat app</p>
+<body class="chat">
+    <div class="chat__sidebar">
+        <h3>People</h3>
+        <div id="users"></div>
+    </div>
 
-    <ol id="message"></ol>
 
-	<form id="message-form">
-		<input type="text" name="message" placeholder="Message">
+    <div class="chat__main">
+        <ol id="messages" class="chat_messages"></ol>
 
-		<button>Send</button>
-		
-	</form>    
-	<button id="send-locattion">Send-locattion</button>
+        <div class="chat__footer">
+            <form id="message-form">
+                <input type="text" name="message" placeholder="Message" autofocus autocomplete="off">
+                <button>Send</button>
+            </form>
+            <button id="send-location">Send-location</button>
+        </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/index.js"></script>
+</body>
+
+</html> -->
+
+<!DOCTYPE html>
+
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body class="chat">
+
+  <div class="chat__sidebar">
+    <h3>People</h3>
+    <div id="users"></div>
+  </div>
+
+  <div class="chat__main">
+    <ol id="messages" class="chat__messages"></ol>
+
+    <div class="chat__footer">
+      <form id="message-form">
+        <input name="message" type="text" placeholder="Message" autofocus autocomplete="off">
+        <button>Send</button>
+      </form>
+      <button id="send-location">Send location</button>
+    </div>
+  </div>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="/js/index.js"></script>
 </body>
 
 </html>
