--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-</head>
-
-<body class="chat">
-    <div class="chat__sidebar">
-        <h3>People</h3>
-        <div id="users"></div>
-    </div>
-
-
-    <div class="chat__main">
-        <ol id="messages" class="chat_messages"></ol>
-
-        <div class="chat__footer">
-            <form id="message-form">
-                <input type="text" name="message" placeholder="Message" autofocus autocomplete="off">
-                <button>Send</button>
-            </form>
-            <button id="send-location">Send-location</button>
-        </div>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/index.js"></script>
-</body>
-
-</html> -->
 
 <!DOCTYPE html>
 
@@ -61,6 +29,7 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="/js/libs/moment.js"></script>
   <script src="/js/index.js"></script>
 </body>
 
