--- a/public/chat.html
+++ b/public/chat.html
@@ -58,6 +58,9 @@
     <!-- variable template -->
     <script src="/js/libs/mustache.js"></script>
     <script src="/js/chat.js"></script>
+
+
+    <script src="/js/libs/deparam.js"></script>
 </body>
 
 </html>
